# pkg-build-tool

./: CMakeLists.txt  README.md
3rd/inireader/: ini.c  inireader.cpp  inireader.h
binary-generator/: Program.cs  binary-generator.csproj  binary-generator.sln
rc/: CMakeLists.txt
rc/res/: CMakeLists.txt
rc/res/icon/: icon.rc.in
rc/res/rc/: CMakeLists.txt
rc/res/src/: main.cpp
rc/res/src/private/: main-content.h
src/: collect-files.cpp  exce.h  inst.cpp  main-check-env.h  main-copy-file.h  main-def-extern.h  main-def.h  main-write-files.h  main.cpp
